tests/baselines/reference/spreadEnum6.errors.txt
tests/cases/conformance/enums/spreadEnum6.ts(42,8): error TS1397: Spread enum member has overlapped on 'A'.
tests/cases/conformance/enums/spreadEnum6.ts(42,8): error TS1397: Spread enum member has overlapped on 'B'.
tests/cases/conformance/enums/spreadEnum6.ts(42,8): error TS1397: Spread enum member has overlapped on 'C'.
tests/cases/conformance/enums/spreadEnum6.ts(42,8): error TS1397: Spread enum member has overlapped on 'D'.


==== tests/cases/conformance/enums/spreadEnum6.ts (4 errors) ====
    enum LiteralEnum1 {
        A = 0,
        B
    }
    
    enum LiteralEnum1 {
        C,
        D
    }
    
    enum LiteralEnum2 {
        E = 0,
        F
    }
    
    enum LiteralEnum2 {
        G,
        H
    }
    
    enum R1 {
        ...LiteralEnum1,
        R1 = 'R1'
    }
    
    enum R1 {
        R11 = 'R11'
    }
    
    enum R2 {
        ...LiteralEnum1,
        R2 = 'R2'
    }
    
    enum R2 {
        ...LiteralEnum2,
        R22 = 'R22'
    }
    
    enum R3 {
        ...R1,
        ...R2,
           ~~
!!! error TS1397: Spread enum member has overlapped on 'A'.
!!! related TS2728 tests/cases/conformance/enums/spreadEnum6.ts:2:5: 'A' is declared here.
           ~~
!!! error TS1397: Spread enum member has overlapped on 'B'.
!!! related TS2728 tests/cases/conformance/enums/spreadEnum6.ts:3:5: 'B' is declared here.
           ~~
!!! error TS1397: Spread enum member has overlapped on 'C'.
!!! related TS2728 tests/cases/conformance/enums/spreadEnum6.ts:7:5: 'C' is declared here.
           ~~
!!! error TS1397: Spread enum member has overlapped on 'D'.
!!! related TS2728 tests/cases/conformance/enums/spreadEnum6.ts:8:5: 'D' is declared here.
        R3 = 'R3'
    }
    
    LiteralEnum1.A;
    LiteralEnum1.B;
    LiteralEnum1.C;
    LiteralEnum1.D;
    R1.A;
    R1.B;
    R1.C;
    R1.D;
    R1.R1;
    R1.R11;
    
    LiteralEnum2.E;
    LiteralEnum2.F;
    LiteralEnum2.G;
    LiteralEnum2.H;
    R2.A;
    R2.B;
    R2.C;
    R2.D;
    R2.E;
    R2.F;
    R2.G;
    R2.H;
    R2.R2;
    R2.R22
    
    R3.A;
    R3.B;
    R3.C;
    R3.D;
    R3.E;
    R3.F;
    R3.G;
    R3.H;
    R3.R1;
    R3.R11;
    R3.R2;
    R3.R22;
    R3.R3;
    